[package]
name = "kms"
version = "0.1.3"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"

[dependencies.paillier]
git = "https://github.com/commerceblock/rust-paillier"
branch = "client_version"

[dependencies.zk-paillier]
git = "https://github.com/commerceblock/zk-paillier"
branch = "client_version"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features = ["ec_secp256k1"]
branch = "client_version"

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
branch = "client_version"

[dependencies.centipede]
git = "https://github.com/commerceblock/centipede"
branch = "client_version"

[dependencies.multi-party-schnorr]
git = "https://github.com/commerceblock/multi-party-schnorr"
tag = "v0.3.4"
optional = true

[features]
default = []
schnorr = ["multi-party-schnorr"]
