[package]
name = "kms"
version = "0.1.4"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rust-gmp = "0.5.0"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"

[dependencies.paillier]
git = "https://github.com/KZen-networks/rust-paillier"
tag = "v0.3.4"

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.2.8"

[dependencies.multi-party-schnorr]
git = "https://github.com/commerceblock/multi-party-schnorr"
tag = "v0.3.4"
optional = true

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features =  ["ec_secp256k1"]
tag = "v0.2.8"

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
tag = "v0.3.8"

[dependencies.centipede]
git = "https://github.com/commerceblock/centipede"
tag = "v0.2.8"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[features]
default = ["schnorr"]
schnorr = ["multi-party-schnorr"]
